Changed cron job to clear games based on start time, tried to fix card transparency bug on iphones

--- a/static/styles.css
+++ b/static/styles.css
@@ -494,7 +494,7 @@ label {
 
 
 #game-card {
-    background-color: #f0f0f0;
+    background-color: transparent;
     display: flex;
     flex-direction: column;
     cursor: pointer;
